added helper scripts and documentation;