@@ -3,6 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.16</version>
+    </parent>
+
     <groupId>com.kgignatyev.visual-wf</groupId>
     <artifactId>visual-wf-demo</artifactId>
     <version>1.0.0</version>
@@ -13,6 +19,9 @@
         <java.version>1.8</java.version>
         <kotlin.version>1.9.10</kotlin.version>
         <kotlin-coroutines.version>1.7.3</kotlin-coroutines.version>
+        <spring-security.version>5.8.7</spring-security.version>
+        <temporal.version>1.21.1</temporal.version>
+        <spring-boot-run-jvm-extra> </spring-boot-run-jvm-extra>
     </properties>
     <dependencies>
         <dependency>
@@ -21,17 +30,29 @@
             <version>1.0.0</version>
         </dependency>
 
+
         <dependency>
             <groupId>io.temporal</groupId>
             <artifactId>temporal-sdk</artifactId>
-            <version>1.20.1</version>
+            <version>${temporal.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.temporal</groupId>
             <artifactId>temporal-testing</artifactId>
-            <version>1.20.1</version>
+            <version>${temporal.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.temporal</groupId>
+            <artifactId>temporal-spring-boot-starter-alpha</artifactId>
+            <version>${temporal.version}</version>
         </dependency>
 
         <dependency>
@@ -57,6 +78,17 @@
             <groupId>io.jumpco.open</groupId>
             <artifactId>kfsm-viz</artifactId>
             <version>1.5.2.4</version>
+        </dependency>
+
+        <!-- Metrics -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
 
@@ -88,6 +120,26 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
         <plugins>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <!--                    -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8000-->
+                    <jvmArguments>
+                        ${spring-boot-run-jvm-extra}
+                        -noverify
+                        --add-modules java.se
+                        --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.nio=ALL-UNNAMED
+                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens java.management/sun.management=ALL-UNNAMED
+                        --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+                    </jvmArguments>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
@@ -111,6 +163,9 @@
                     <args>
                         <arg>-Xjsr305=strict</arg>
                     </args>
+                    <compilerPlugins>
+                        <plugin>spring</plugin>
+                    </compilerPlugins>
                 </configuration>
                 <dependencies>
                     <dependency>
